firebased deployed in 2nd day

--- a/src/Row.css
+++ b/src/Row.css
@@ -15,12 +15,12 @@
     object-fit: contain;
     margin-right: 10px;
     width: 100%;
-    transition: trasform 450ms;
+    transition: trasform 1s;
 
 }
 
 .row__poster:hover{
-    transition: scale(1.08);
+    transform: scale(1.08);
     opacity: 1;
 }
 
@@ -28,3 +28,6 @@
     display: none;
 }
 
+.row__posterLarge{
+    max-height: 250px;
+}
